--- a/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
+++ b/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
@@ -10,6 +10,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
         </Grid.RowDefinitions>
         
         <Grid> <!-- Grid For settings -->
@@ -169,15 +170,8 @@
             </Expander>
         </Grid>
 
-        <Grid Grid.Row="1" Height="25">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="40*" />
-                <ColumnDefinition Width="30*" />
-                <ColumnDefinition Width="30*" />
-            </Grid.ColumnDefinitions>
-
-            <Button Grid.Column="0" HorizontalAlignment="Left" Command="{Binding FindMSFeaturesCommand}" Width="125">Find Features</Button>
-            <Button Grid.Column="2" HorizontalAlignment="Right" Command="{Binding PlotMSFeaturesCommand}" Width="125">Plot Features</Button>
-        </Grid>
+        <Button Grid.Row="1" Height="25" Width="140" HorizontalAlignment="Right" Command="{Binding PlotAlignedFeaturesCommand}">Plot Aligned Features</Button>
+        <Button Grid.Row="2" HorizontalAlignment="Left" Command="{Binding FindMSFeaturesCommand}" Height="25" Width="125">Find Features</Button>
+        <Button Grid.Row="2" HorizontalAlignment="Right" Command="{Binding PlotMSFeaturesCommand}" Height="25" Width="140">Plot Unaligned Features</Button>
     </Grid>
 </UserControl>
