Adding toggle for legend visibility on XIC plot.

--- a/src/MultiAlignRogue/Clustering/ClusterView.xaml
+++ b/src/MultiAlignRogue/Clustering/ClusterView.xaml
@@ -75,6 +75,8 @@
                                         <ContextMenu Name="XicPlotMenu">
                                             <MenuItem IsCheckable="True" IsChecked="{Binding AutoScaleYAxis, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                       Header="Auto Scale Y Axis" />
+                                            <MenuItem IsCheckable="True" IsChecked="{Binding IsLegendVisible, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                      Header="Show Legend"/>
                                         </ContextMenu>
                                     </oxy:PlotView.ContextMenu>
                                 </oxy:PlotView>
