--- a/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
+++ b/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
@@ -6,6 +6,9 @@
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="500">
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVis" />
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -169,8 +172,9 @@
                 </Grid>
             </Expander>
         </Grid>
+        
+        <ProgressBar Grid.Row="1" Height="25" Value="{Binding TotalProgress}" Visibility="{Binding ShouldShowProgress, Converter={StaticResource BoolToVis}}" />
 
-        <Button Grid.Row="1" Height="25" Width="140" HorizontalAlignment="Right" Command="{Binding PlotAlignedFeaturesCommand}">Plot Aligned Features</Button>
         <Button Grid.Row="2" HorizontalAlignment="Left" Command="{Binding FindMSFeaturesCommand}" Height="25" Width="125">Find Features</Button>
         <Button Grid.Row="2" HorizontalAlignment="Right" Command="{Binding PlotMSFeaturesCommand}" Height="25" Width="140">Plot Unaligned Features</Button>
     </Grid>
